Added Drop Column logic.

--- a/ML-Baseball-FeatureImportanceColumnDrop/ML-Baseball-FeatureImportanceColumnDrop.csproj
+++ b/ML-Baseball-FeatureImportanceColumnDrop/ML-Baseball-FeatureImportanceColumnDrop.csproj
@@ -8,6 +8,20 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ML" Version="1.4.0" />
+    <PackageReference Include="Microsoft.ML.FastTree" Version="1.4.0" />
+    <PackageReference Include="Microsoft.ML.LightGBM" Version="1.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Metrics\" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Data\BaseballHOFFull.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
