--- a/ML-Baseball-FeatureImportanceColumnDrop/ML-Baseball-FeatureImportanceColumnDrop.csproj
+++ b/ML-Baseball-FeatureImportanceColumnDrop/ML-Baseball-FeatureImportanceColumnDrop.csproj
@@ -14,12 +14,14 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Metrics\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="Data\BaseballHOFFull.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Metrics\ModelPerformanceMetrics.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
